<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/enable_notifications_service_preference"
            app:singleLineTitle="false"
            app:summary="@string/enable_notifications_service_summary"
            app:title="@string/enable_background_notifications_service" />

        <MultiSelectListPreference
            app:dependency="@string/enable_notifications_service_preference"
            app:entries="@array/notification_effects_entries"
            app:entryValues="@array/notification_effects_values"
            app:iconSpaceReserved="false"
            app:key="@string/notification_sound_effect_preference"
            app:title="@string/notifications_sound_effects" />

        <Preference
            app:dependency="@string/enable_notifications_service_preference"
            app:iconSpaceReserved="false"
            app:key="@string/clear_notifications_pool_preference"
            app:title="@string/clear_notification_pool" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/theme">

        <ListPreference
            app:defaultValue="@string/theme_light"
            app:entries="@array/themes_entries"
            app:entryValues="@array/themes_values"
            app:iconSpaceReserved="false"
            app:key="@string/theme_preference"
            app:title="@string/theme"
            tools:summary="Light" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/application">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/clear_cache_preference"
            app:title="@string/clear_cache" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/logout_preference"
            app:title="@string/logout" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/build_version_preference"
            app:title="@string/build_version"
            tools:summary="1.0.0" />
    </PreferenceCategory>
</PreferenceScreen>