<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="?dialogPreferredPadding">

    <TextView
        android:id="@+id/fragmentEditStatusTitle"
        style="?accentTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingVertical="12dp"
        android:text="@string/edit_status"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/fragmentEditStatusText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentEditStatusTitle"
        android:autofillHints="text,textAutoComplete"
        android:hint="@string/enter_your_status"
        android:inputType="textAutoComplete"
        android:textColorHint="@color/grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragmentEditStatusCancelBtn"
        style="?textButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentEditStatusText"
        android:layout_toStartOf="@id/fragmentEditStatusOkBtn"
        android:text="@string/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragmentEditStatusOkBtn"
        style="?textButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragmentEditStatusText"
        android:layout_alignEnd="@id/fragmentEditStatusText"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentEditStatusText" />
</RelativeLayout>