<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_colorPrimary"
    android:fillViewport="true"
    tools:context=".ui.activity.auth.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="48dp"
        android:paddingVertical="56dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:text="@string/log_in"/>

        <TextView
            android:id="@+id/loginMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light_colorSecondaryDark"
            android:textAlignment="center"
            android:layout_marginVertical="30dp"
            android:textSize="18sp"
            tools:text="Network error"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginLoginLayout"
            style="@style/WhiteEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginLogin"
                style="@style/WhiteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loginPasswordLayout"
            style="@style/WhiteEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                style="@style/WhiteEditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            style="@style/WhiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:text="@string/login"
            android:layout_gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/loginRegisterLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/haven_t_account_register_now"/>
    </LinearLayout>
</ScrollView>