<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.maxim.barybians.ui.fragment.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/loginDarkModeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="24dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/theme"
                android:padding="12dp"
                android:src="@{viewModel.isDarkMode ? @drawable/ic_day : @drawable/ic_night}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_day" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="56dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textSize="28sp"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:textColor="@color/colorError"
                android:textSize="18sp"
                app:bindText="@{viewModel.errorMessageRes}"
                app:layout_constraintTop_toBottomOf="@id/loginTitle"
                tools:text="Network error" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginLoginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="30dp"
                android:hint="@string/login"
                app:endIconMode="clear_text"
                app:errorText="@{viewModel.loginMessage}"
                app:layout_constraintTop_toBottomOf="@id/loginMessage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.isLoading}"
                    android:text="@={viewModel.login}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/loginPasswordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:errorText="@{viewModel.passwordMessage}"
                app:layout_constraintTop_toBottomOf="@id/loginLoginLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{!viewModel.isLoading}"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:enabled="@{!viewModel.isLoading}"
                android:text="@string/login"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPasswordLayout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginRegisterLink"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="56dp"
                android:layout_marginTop="24dp"
                android:enabled="@{!viewModel.isLoading}"
                android:padding="16dp"
                android:text="@string/haven_t_account_register_now"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginBtn"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
